overlaping components fixed

--- a/public/style.css
+++ b/public/style.css
@@ -291,17 +291,21 @@ header {
 }
 .results {
     width: 50%;
+    min-height: 100%;
+    background: white;
+    border: 1px solid dark-grey;
+    border-radius: 5px;
 }
 .search-result {
     display: flex;
     flex-direction: row;
     margin-top: 10px;
-    border-radius: 3px;
-    border: 1px solid dark-grey;
-    background: white;
     padding: 12px 30px 12px 12px;
     color: #385898;
     cursor: pointer;
+}
+.no-results {
+    padding: 20px;
 }
 .results h3:hover {
     text-decoration: underline;
